# svg42pdf

./: .gitignore  .gitmodules  LICENSE  README.rst  increment_version.py  requirements.txt  setup.cfg  setup.py  upload_pypi.sh
svg42pdf/: __init__.py  svg2rlg.py  version.py
