[metadata]
name = svg42pdf
author = Karel Brinda
author-email = karel.brinda@gmail.com
#summary = RNF framework for NGS: simulation of reads, evaluation of mappers, conversion of RNF-compliant data..
#description-file = README.rst
home-page = http://github.com/karel-brinda/svg42pdf
requires-python = >=3.2
#license = MIT
#keywords = Bioinformatics, Computational Biology, Next-Generation Sequencing, Read Simulation, Mappers Evaluation, Snakemake
#zip_safe = False
supported-platform =
	Linux
	MacOS
	CygWin
classifier =
#	Development Status :: 5 - Production/Stable
#	Environment :: Console
#	Intended Audience :: Science/Research
#	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Operating System :: Unix
#	Topic :: Scientific/Engineering :: Bio-Informatics

[files]
packages =
	svg42pdf
	svg42pdf.svg2rlg
extra_files =
	setup.py
#	svg42pdf.py
#	README.rst

[entry_points]
console_scripts=
	svg42pdf = svg42pdf:main

[global]
setup-hooks = pbr.hooks.setup_hook

[pbr]
warnerrors = True
